--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required (VERSION 2.8.11)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
 find_package(ignition-math4 REQUIRED)
+find_package(MAVLink)
+
+message(STATUS "${MAVLINK_INCLUDE_DIRS}")
 
 add_executable(flightgear_bridge 
                src/flightgear_bridge.cpp
@@ -12,7 +17,7 @@ add_executable(flightgear_bridge
 
 target_include_directories(flightgear_bridge 
                 BEFORE
-                PUBLIC ${PX4_SOURCE_DIR}/mavlink/include)
+                PUBLIC ${MAVLINK_INCLUDE_DIRS})
 
 target_compile_options(flightgear_bridge PUBLIC -fexceptions -Wno-cast-align -Wno-address-of-packed-member)
 
