--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.8.11)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-find_package(ignition-math4 REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package(MAVLink)
 
 message(STATUS "${MAVLINK_INCLUDE_DIRS}")
@@ -20,6 +20,5 @@ target_include_directories(flightgear_bridge
                 PUBLIC ${MAVLINK_INCLUDE_DIRS})
 
 target_compile_options(flightgear_bridge PUBLIC -g -fexceptions -Wno-cast-align -Wno-address-of-packed-member)
-
-target_link_libraries(flightgear_bridge ignition-math4::ignition-math4)
+target_link_libraries(flightgear_bridge Eigen3::Eigen)
 
