--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "models/FlightGear-TF-R1"]
 	path = models/TF-R1
 	url = https://github.com/ThunderFly-aerospace/FlightGear-TF-R1.git
+[submodule "models/FlightGear-TF-G2"]
+	path = models/TF-G2
+	url = https://github.com/ThunderFly-aerospace/FlightGear-TF-G2.git
